update text frontpage, layout gallery

--- a/themes/carlschirm/layouts/index.html
+++ b/themes/carlschirm/layouts/index.html
@@ -6,4 +6,24 @@
   </div>
 </section>
 
+<section>
+	<div class="columns">
+		<div class="column is-half">
+			<div class="content">
+				<h2>Ihre individuellen Wünsche und Anforderungen stehen im Mittelpunkt!</h2>
+				<p>Im Gewerbepark <em>Carl Schirm</em> zwischen Tübingen und Reutlingen finden Sie auf historischem Areal Lager-, Service- und Produktionsflächen sowie Büroräume, die äußerst flexibel gestaltet werden können.</p>
+				<p>Unter den bereits angesiedelten Firmen aus unterschiedlichen Branchen befinden sich Produktionsbetriebe, Handel, Internetshops, Dienstleistungen, Ingenieurbüros, junge Gründerfirmen, Labore, Lager sowie Handwerksbetriebe.</p>
+ 				<p>Durch individuelle und flexible Raumaufteilung sowie vorhandene Expansionsmöglichkeiten ist der Gewerbepark <em>Carl Schirm</em> ideal für Startup-Unternehmen, die Gewerberäume mieten möchten. Innerhalb der vorhandenen Entwicklungsflächen versuchen wir, Ihnen die bestmögliche Raumlösung für Ihren aktuellen Nutzungsbedarf anzubieten.</p>
+			</div>
+		</div>
+		<div class="column">
+			<div class="content">
+				<h2>Standortvorteile im Gewerbepark mit historischer Bausubstanz</h2>
+				<p>Durch die perfekte Anbindung an die B27, die Nähe zum Großraum Stuttgart, insbesondere zum Flughafen Stuttgart und zur Messe Stuttgart, und die Lage direkt an der Bahnstrecke Reutlingen-Tübingen-Stuttgart ist der Gewerbepark schnell zu erreichen. Der Standort ist somit eine preisgünstige Alternative zum Großraum Stuttgart.</p>
+				<p>Arbeiten in guter Nachbarschaft heißt für uns vor allem Wohlfühlen am Standort. Seit über 20 Jahren wird versucht, den ursprünglichen Charme der ehemaligen Textilfabrik mit modernster technischer Ausstattung zu verbinden. So bieten wir Ihnen ein Ambiente, das noch das Flair des Industriezeitalters ausstrahlt, zum Beispiel in großzügigen Shedhallen mit viel Tageslicht, die hochwertig saniert wurden.</p>
+			</div>
+		</div>
+	</div>
+</section>
+
 {{ partial "footer.html" . }}
