add where to find us page

--- a/themes/carlschirm/layouts/anfahrt/single.html
+++ b/themes/carlschirm/layouts/anfahrt/single.html
@@ -1,5 +1,26 @@
 {{ partial "header.html" . }}
 
-<iframe width="100%" height="300px" frameBorder="0" allowfullscreen src="https://umap.openstreetmap.fr/de/map/carl_schirm_298478?scaleControl=false&miniMap=false&scrollWheelZoom=false&zoomControl=true&allowEdit=false&moreControl=true&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=true&onLoadPanel=undefined&captionBar=false"></iframe><p><a href="https://umap.openstreetmap.fr/de/map/carl_schirm_298478">Vollbildanzeige</a></p>
+<div class="section">
+	<div class="columns">
+		<div class="column is-two-thirds">
+			<div class="content has-text-light">
+				<h3>Nur mit dem Schiff sind wir nicht erreichbar...</h3>
+				<p>...jedenfalls unter normalen Umständen.</p>
+				<p>Der Gewerbepark zeichnet sich durch seine zentrale Lage im Dreieck Stuttgart-Tübingen-Reutlingen aus. Durch die unmittelbar angrenzende B27 besteht eine gute Anbindung an den Großraum Stuttgart (Flughafen/Messe Stuttgart: ca. 20 Minuten Fahrzeit).</p>
+				<p>Der Bahnhof mit der Bahnlinie Tübingen-Reutlingen-Stuttgart ist ebenfalls in wenigen Minuten zu Fuß erreichbar.</p>
+			</div>
+		</div>
+		<div class="column">
+			<figure>
+				<img src="/images/anfahrt/hochwasser.jpg">
+			</figure>
+		</div>
+	</div>
+</div>
+
+<div class="section">
+	<iframe width="100%" height="auto" src="http://maps.stamen.com/toner/embed#17/48.53121/9.13863"></iframe>
+</div>
+
 
 {{ partial "footer.html" . }}
