--- a/themes/carlschirm/layouts/partials/nav.html
+++ b/themes/carlschirm/layouts/partials/nav.html
@@ -53,10 +53,10 @@
             Historie
           </a>
           <hr class="navbar-divider">
-          <a class="navbar-item" href="/galerie/">
+          <a class="navbar-item" href="/impressionen/">
             Bilder
           </a>
-          <a class="navbar-item" href="/lageplan/">
+          <a class="navbar-item" href="/anfahrt/">
             Lageplan
           </a>
         </div>
