--- a/themes/carlschirm/layouts/anfahrt/single.html
+++ b/themes/carlschirm/layouts/anfahrt/single.html
@@ -2,7 +2,7 @@
 
 <div class="section">
 	<div class="columns">
-		<div class="column is-two-thirds">
+		<div class="column">
 			<div class="content has-text-light">
 				<h3>Nur mit dem Schiff sind wir nicht erreichbar...</h3>
 				<p>...jedenfalls unter normalen Umständen.</p>
@@ -15,12 +15,10 @@
 				<img src="/images/anfahrt/hochwasser.jpg">
 			</figure>
 		</div>
+<!-- 		<div class="column">
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2642.0821595876696!2d9.135124715520131!3d48.531657179256875!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4799efc5b82d8425%3A0xb470f340c74e45c2!2sCarl+Schirm+GmbH+%26+Co.+Kr%C3%BCger+KG!5e0!3m2!1sde!2sde!4v1555358024317!5m2!1sde!2sde" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
+		</div> -->
 	</div>
 </div>
-
-<div class="section">
-	<iframe width="100%" height="auto" src="http://maps.stamen.com/toner/embed#17/48.53121/9.13863"></iframe>
-</div>
-
 
 {{ partial "footer.html" . }}
