clean up files, attempt image gallery

--- a/themes/carlschirm/layouts/gallery/single.html
+++ b/themes/carlschirm/layouts/gallery/single.html
@@ -8,15 +8,20 @@
     </div>
 </div> -->
 
+
+
 <div class="section">
-<div class="fullwidth">
-  <div><img src="/images/impressionen/cs_impressionen_01.jpg"></div>
+  <div class="fullwidth">
+
+<!--   <div><img src="/images/impressionen/cs_impressionen_01.jpg"></div>
   <div><img src="/images/impressionen/cs_impressionen_02.jpg"></div>
-  <div><img src="/images/impressionen/cs_impressionen_03.jpg"></div>
-</div>
+  <div><img src="/images/impressionen/cs_impressionen_03.jpg"></div> -->
+  {{ .Content }}
+
+  </div>
 </div>
 
-<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+<!-- <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 <script type="text/javascript" src="/slick/slick.min.js"></script>
 
@@ -27,6 +32,6 @@
       dots: true
     });
   });
-</script>
+</script> -->
 
 {{ partial "footer.html" . }}
