rename Bilder -> Impressionen, change baseURL

--- a/themes/carlschirm/layouts/partials/nav.html
+++ b/themes/carlschirm/layouts/partials/nav.html
@@ -54,7 +54,7 @@
           </a>
           <hr class="navbar-divider">
           <a class="navbar-item" href="/impressionen/">
-            Bilder
+            Impressionen
           </a>
           <a class="navbar-item" href="/anfahrt/">
             Lageplan
