--- a/themes/carlschirm/static/css/carlschirm/css/cs.css
+++ b/themes/carlschirm/static/css/carlschirm/css/cs.css
@@ -122,7 +122,7 @@
 
 .loader, .control.is-loading::after, .select.is-loading::after, .button.is-loading::after {
   animation: spinAround 500ms infinite linear;
-  border: 2px solid #dbdbdb;
+  border: 2px solid #DBDBDB;
   border-radius: 290486px;
   border-right-color: transparent;
   border-top-color: transparent;
@@ -1030,11 +1030,11 @@ a.has-text-danger:hover, a.has-text-danger:focus {
 }
 
 .has-text-grey-lighter {
-  color: #dbdbdb !important;
+  color: #DBDBDB !important;
 }
 
 .has-background-grey-lighter {
-  background-color: #dbdbdb !important;
+  background-color: #DBDBDB !important;
 }
 
 .has-text-white-ter {
@@ -1477,7 +1477,7 @@ a.box:active {
 
 .button {
   background-color: white;
-  border-color: #dbdbdb;
+  border-color: #DBDBDB;
   border-width: 2px;
   color: #363636;
   cursor: pointer;
@@ -2327,7 +2327,7 @@ a.box:active {
 }
 .button[disabled], fieldset[disabled] .button {
   background-color: white;
-  border-color: #dbdbdb;
+  border-color: #DBDBDB;
   box-shadow: none;
   opacity: 0.5;
 }
@@ -2347,7 +2347,7 @@ a.box:active {
 }
 .button.is-static {
   background-color: whitesmoke;
-  border-color: #dbdbdb;
+  border-color: #DBDBDB;
   color: #7a7a7a;
   box-shadow: none;
   pointer-events: none;
@@ -2515,7 +2515,7 @@ a.box:active {
 }
 .content blockquote {
   background-color: whitesmoke;
-  border-left: 5px solid #dbdbdb;
+  border-left: 5px solid #DBDBDB;
   padding: 1.25em 1.5em;
 }
 .content ol {
@@ -2586,7 +2586,7 @@ a.box:active {
 }
 .content table td,
 .content table th {
-  border: 1px solid #dbdbdb;
+  border: 1px solid #DBDBDB;
   border-width: 0 0 1px;
   padding: 0.5em 0.75em;
   vertical-align: top;
@@ -3431,7 +3431,7 @@ fieldset[disabled] .radio {
   color: #363636;
 }
 .file-label:active .file-name {
-  border-color: #cfcfcf;
+  border-color: #cecece;
 }
 
 .file-input {
@@ -3446,7 +3446,7 @@ fieldset[disabled] .radio {
 
 .file-cta,
 .file-name {
-  border-color: #dbdbdb;
+  border-color: #DBDBDB;
   border-radius: 4px;
   font-size: 1em;
   padding-left: 1em;
@@ -3460,7 +3460,7 @@ fieldset[disabled] .radio {
 }
 
 .file-name {
-  border-color: #dbdbdb;
+  border-color: #DBDBDB;
   border-style: solid;
   border-width: 1px 1px 1px 0;
   display: block;
@@ -3483,7 +3483,7 @@ fieldset[disabled] .radio {
 }
 
 .label {
-  color: #363636;
+  color: #DBDBDB;
   display: block;
   font-size: 1rem;
   font-weight: 700;
@@ -3730,7 +3730,7 @@ fieldset[disabled] .radio {
   font-size: 1.5rem;
 }
 .control.has-icons-left .icon, .control.has-icons-right .icon {
-  color: #dbdbdb;
+  color: #DBDBDB;
   height: 2.25em;
   pointer-events: none;
   position: absolute;
@@ -3977,7 +3977,7 @@ fieldset[disabled] .radio {
   width: 100%;
 }
 .progress::-webkit-progress-bar {
-  background-color: #dbdbdb;
+  background-color: #DBDBDB;
 }
 .progress::-webkit-progress-value {
   background-color: #292929;
@@ -3994,8 +3994,8 @@ fieldset[disabled] .radio {
   animation-iteration-count: infinite;
   animation-name: moveIndeterminate;
   animation-timing-function: linear;
-  background-color: #dbdbdb;
-  background-image: linear-gradient(to right, #292929 30%, #dbdbdb 30%);
+  background-color: #DBDBDB;
+  background-image: linear-gradient(to right, #292929 30%, #DBDBDB 30%);
   background-position: top left;
   background-repeat: no-repeat;
   background-size: 150% 150%;
@@ -4016,7 +4016,7 @@ fieldset[disabled] .radio {
   background-color: white;
 }
 .progress.is-white:indeterminate {
-  background-image: linear-gradient(to right, white 30%, #dbdbdb 30%);
+  background-image: linear-gradient(to right, white 30%, #DBDBDB 30%);
 }
 .progress.is-black::-webkit-progress-value {
   background-color: #0a0a0a;
@@ -4028,7 +4028,7 @@ fieldset[disabled] .radio {
   background-color: #0a0a0a;
 }
 .progress.is-black:indeterminate {
-  background-image: linear-gradient(to right, #0a0a0a 30%, #dbdbdb 30%);
+  background-image: linear-gradient(to right, #0a0a0a 30%, #DBDBDB 30%);
 }
 .progress.is-light::-webkit-progress-value {
   background-color: whitesmoke;
@@ -4040,7 +4040,7 @@ fieldset[disabled] .radio {
   background-color: whitesmoke;
 }
 .progress.is-light:indeterminate {
-  background-image: linear-gradient(to right, whitesmoke 30%, #dbdbdb 30%);
+  background-image: linear-gradient(to right, whitesmoke 30%, #DBDBDB 30%);
 }
 .progress.is-dark::-webkit-progress-value {
   background-color: #637263;
@@ -4052,7 +4052,7 @@ fieldset[disabled] .radio {
   background-color: #637263;
 }
 .progress.is-dark:indeterminate {
-  background-image: linear-gradient(to right, #637263 30%, #dbdbdb 30%);
+  background-image: linear-gradient(to right, #637263 30%, #DBDBDB 30%);
 }
 .progress.is-primary::-webkit-progress-value {
   background-color: #FA7C91;
@@ -4064,7 +4064,7 @@ fieldset[disabled] .radio {
   background-color: #FA7C91;
 }
 .progress.is-primary:indeterminate {
-  background-image: linear-gradient(to right, #FA7C91 30%, #dbdbdb 30%);
+  background-image: linear-gradient(to right, #FA7C91 30%, #DBDBDB 30%);
 }
 .progress.is-link::-webkit-progress-value {
   background-color: #637263;
@@ -4076,7 +4076,7 @@ fieldset[disabled] .radio {
   background-color: #637263;
 }
 .progress.is-link:indeterminate {
-  background-image: linear-gradient(to right, #637263 30%, #dbdbdb 30%);
+  background-image: linear-gradient(to right, #637263 30%, #DBDBDB 30%);
 }
 .progress.is-info::-webkit-progress-value {
   background-color: #209cee;
@@ -4088,7 +4088,7 @@ fieldset[disabled] .radio {
   background-color: #209cee;
 }
 .progress.is-info:indeterminate {
-  background-image: linear-gradient(to right, #209cee 30%, #dbdbdb 30%);
+  background-image: linear-gradient(to right, #209cee 30%, #DBDBDB 30%);
 }
 .progress.is-success::-webkit-progress-value {
   background-color: #637263;
@@ -4100,7 +4100,7 @@ fieldset[disabled] .radio {
   background-color: #637263;
 }
 .progress.is-success:indeterminate {
-  background-image: linear-gradient(to right, #637263 30%, #dbdbdb 30%);
+  background-image: linear-gradient(to right, #637263 30%, #DBDBDB 30%);
 }
 .progress.is-warning::-webkit-progress-value {
   background-color: #ffdd57;
@@ -4112,7 +4112,7 @@ fieldset[disabled] .radio {
   background-color: #ffdd57;
 }
 .progress.is-warning:indeterminate {
-  background-image: linear-gradient(to right, #ffdd57 30%, #dbdbdb 30%);
+  background-image: linear-gradient(to right, #ffdd57 30%, #DBDBDB 30%);
 }
 .progress.is-danger::-webkit-progress-value {
   background-color: #ff3860;
@@ -4124,7 +4124,7 @@ fieldset[disabled] .radio {
   background-color: #ff3860;
 }
 .progress.is-danger:indeterminate {
-  background-image: linear-gradient(to right, #ff3860 30%, #dbdbdb 30%);
+  background-image: linear-gradient(to right, #ff3860 30%, #DBDBDB 30%);
 }
 .progress.is-small {
   height: 0.75rem;
@@ -4150,7 +4150,7 @@ fieldset[disabled] .radio {
 }
 .table td,
 .table th {
-  border: 1px solid #dbdbdb;
+  border: 1px solid #DBDBDB;
   border-width: 0 0 1px;
   padding: 0.5em 0.75em;
   vertical-align: top;
@@ -4737,7 +4737,7 @@ a.tag:hover {
 
 .card-footer {
   background-color: transparent;
-  border-top: 1px solid #dbdbdb;
+  border-top: 1px solid #DBDBDB;
   align-items: stretch;
   display: flex;
 }
@@ -4752,7 +4752,7 @@ a.tag:hover {
   padding: 0.75rem;
 }
 .card-footer-item:not(:last-child) {
-  border-right: 1px solid #dbdbdb;
+  border-right: 1px solid #DBDBDB;
 }
 
 .card .media:not(:last-child) {
@@ -4824,7 +4824,7 @@ button.dropdown-item.is-active {
 }
 
 .dropdown-divider {
-  background-color: #dbdbdb;
+  background-color: #DBDBDB;
   border: none;
   display: block;
   height: 1px;
@@ -4950,7 +4950,7 @@ button.dropdown-item.is-active {
   border-top-right-radius: 4px;
 }
 .list-item:not(:last-child) {
-  border-bottom: 1px solid #dbdbdb;
+  border-bottom: 1px solid #DBDBDB;
 }
 .list-item.is-active {
   background-color: #637263;
@@ -5053,7 +5053,7 @@ a.list-item {
   color: #fff;
 }
 .menu-list li ul {
-  border-left: 1px solid #dbdbdb;
+  border-left: 1px solid #DBDBDB;
   margin: 0.75em;
   padding-left: 0.75em;
 }
@@ -5227,7 +5227,7 @@ a.list-item {
 }
 
 .message-body {
-  border-color: #dbdbdb;
+  border-color: #DBDBDB;
   border-radius: 4px;
   border-style: solid;
   border-width: 0 0 0 4px;
@@ -5305,7 +5305,7 @@ a.list-item {
 }
 
 .modal-card-head {
-  border-bottom: 1px solid #dbdbdb;
+  border-bottom: 1px solid #DBDBDB;
   border-top-left-radius: 6px;
   border-top-right-radius: 6px;
 }
@@ -5321,7 +5321,7 @@ a.list-item {
 .modal-card-foot {
   border-bottom-left-radius: 6px;
   border-bottom-right-radius: 6px;
-  border-top: 1px solid #dbdbdb;
+  border-top: 1px solid #DBDBDB;
 }
 .modal-card-foot .button:not(:last-child) {
   margin-right: 10px;
@@ -6156,7 +6156,7 @@ body.has-navbar-fixed-bottom-touch {
     transform: rotate(135deg) translate(0.25em, -0.25em);
   }
   .navbar-item.has-dropdown-up .navbar-dropdown {
-    border-bottom: 2px solid #dbdbdb;
+    border-bottom: 2px solid #DBDBDB;
     border-radius: 6px 6px 0 0;
     border-top: none;
     bottom: 100%;
@@ -6191,7 +6191,7 @@ body.has-navbar-fixed-bottom-touch {
     background-color: white;
     border-bottom-left-radius: 6px;
     border-bottom-right-radius: 6px;
-    border-top: 2px solid #dbdbdb;
+    border-top: 2px solid #DBDBDB;
     box-shadow: 0 8px 8px rgba(10, 10, 10, 0.1);
     display: none;
     font-size: 0.875rem;
@@ -6342,7 +6342,7 @@ body.has-spaced-navbar-fixed-bottom {
 .pagination-previous,
 .pagination-next,
 .pagination-link {
-  border-color: #dbdbdb;
+  border-color: #DBDBDB;
   color: #363636;
   min-width: 2.25em;
 }
@@ -6365,8 +6365,8 @@ body.has-spaced-navbar-fixed-bottom {
 .pagination-previous[disabled],
 .pagination-next[disabled],
 .pagination-link[disabled] {
-  background-color: #dbdbdb;
-  border-color: #dbdbdb;
+  background-color: #DBDBDB;
+  border-color: #DBDBDB;
   box-shadow: none;
   color: #7a7a7a;
   opacity: 0.5;
@@ -6460,14 +6460,14 @@ body.has-spaced-navbar-fixed-bottom {
 .panel-heading,
 .panel-tabs,
 .panel-block {
-  border-bottom: 1px solid #dbdbdb;
-  border-left: 1px solid #dbdbdb;
-  border-right: 1px solid #dbdbdb;
+  border-bottom: 1px solid #DBDBDB;
+  border-left: 1px solid #DBDBDB;
+  border-right: 1px solid #DBDBDB;
 }
 .panel-heading:first-child,
 .panel-tabs:first-child,
 .panel-block:first-child {
-  border-top: 1px solid #dbdbdb;
+  border-top: 1px solid #DBDBDB;
 }
 
 .panel-heading {
@@ -6487,7 +6487,7 @@ body.has-spaced-navbar-fixed-bottom {
   justify-content: center;
 }
 .panel-tabs a {
-  border-bottom: 1px solid #dbdbdb;
+  border-bottom: 1px solid #DBDBDB;
   margin-bottom: -1px;
   padding: 0.5em;
 }
@@ -6566,7 +6566,7 @@ label.panel-block:hover {
 }
 .tabs a {
   align-items: center;
-  border-bottom-color: #dbdbdb;
+  border-bottom-color: #DBDBDB;
   border-bottom-style: solid;
   border-bottom-width: 1px;
   color: #292929;
@@ -6589,7 +6589,7 @@ label.panel-block:hover {
 }
 .tabs ul {
   align-items: center;
-  border-bottom-color: #dbdbdb;
+  border-bottom-color: #DBDBDB;
   border-bottom-style: solid;
   border-bottom-width: 1px;
   display: flex;
@@ -6628,11 +6628,11 @@ label.panel-block:hover {
 }
 .tabs.is-boxed a:hover {
   background-color: whitesmoke;
-  border-bottom-color: #dbdbdb;
+  border-bottom-color: #DBDBDB;
 }
 .tabs.is-boxed li.is-active a {
   background-color: white;
-  border-color: #dbdbdb;
+  border-color: #DBDBDB;
   border-bottom-color: transparent !important;
 }
 .tabs.is-fullwidth li {
@@ -6640,7 +6640,7 @@ label.panel-block:hover {
   flex-shrink: 0;
 }
 .tabs.is-toggle a {
-  border-color: #dbdbdb;
+  border-color: #DBDBDB;
   border-style: solid;
   border-width: 1px;
   margin-bottom: 0;
