--- a/themes/carlschirm/static/css/carlschirm/sass/cs.scss
+++ b/themes/carlschirm/static/css/carlschirm/sass/cs.scss
@@ -27,7 +27,7 @@ $body-background-color: $grey-dark;
 $control-border-width: 2px;
 $input-border-color: transparent;
 $input-shadow: none;
-$label-color: $white-ter;
+$label-color: $grey-lighter;
 
 // add hero background image capacity
 .hero-cs {
