--- a/themes/carlschirm/layouts/gallery/single.html
+++ b/themes/carlschirm/layouts/gallery/single.html
@@ -1,7 +1,9 @@
 {{ partial "header.html" . }}
 
 <div class="section">
+  <div class="container">
     {{ .Content }}
+  </div>
 </div>
 
 {{ partial "footer.html" . }}
