change list layout for news

--- a/themes/carlschirm/layouts/_default/single.html
+++ b/themes/carlschirm/layouts/_default/single.html
@@ -4,8 +4,8 @@
 	<div class="columns">
 		<div class="column is-half is-offset-one-quarter">
 			<div class="content has-text-light ">
-				<h1>{{ .Title }}</h1>
-				<h6>{{.Date.Format "02. January 2006"}}</h4>
+				<h2>{{ .Title }}</h2>
+				<h6>{{.Date.Format "02.01.2006"}}</h4>
 				{{ .Content }}
 			</div>	
 		</div>
