--- a/themes/carlschirm/layouts/_default/list.html
+++ b/themes/carlschirm/layouts/_default/list.html
@@ -4,15 +4,47 @@
 	<div class="columns">
 		<div class="column is-half is-offset-one-quarter">
 			<div class= "content has-text-light">
-			  {{ .Content }}
-			  	<ul>
-				<!-- Ranges through content/posts/*.md -->
+			  	{{ .Content }}
+			  	{{ range .Pages.ByDate}}
+			  	<h2><a href="{{.Permalink}}">{{.Title}}</a></h2>
+			  	<h6>{{.Date.Format "02.01.2006"}}</h6>
+			  	<p>	{{ .Summary }}
+					{{ if .Truncated }}
+					<a href="{{ .Permalink }}">Weiter lesen…</a>
+					{{ end }}
+				</p>
+				{{ end }}
+			  	<!-- <ul>
 				{{ range .Pages.ByDate}}
 					<li>
-						<a href="{{.Permalink}}">{{.Date.Format "02. January 2006"}} | {{.Title}}</a>
+						<a href="{{.Permalink}}">{{.Date.Format "02.01.2006"}} | {{.Title}}</a>
+						{{ .Summary }}
+						{{ if .Truncated }}
+						<a href="{{ .Permalink }}">Weiter lesen…</a>
+						{{ end }}
 					</li>
 				{{ end }}
-				</ul>	
+				</ul>	 -->
+				<!-- {{ range .Pages.ByDate}}
+				<div class="card">
+				  <header class="card-header">
+				    <p class="card-header-title">
+				      <a href="{{.Permalink}}">{{.Title}}</a>
+				    </p>
+				  </header>
+				  <div class="card-content">
+				    <div class="content">
+				      	<h6>{{.Date.Format "02.01.2006"}}</h6>
+				      	<p>	{{ .Summary }} </p>  	
+				    </div>
+				  </div>
+				  {{ if .Truncated }}
+				  <footer class="card-footer">
+				  	<a href="{{ .Permalink }}">Weiter lesen…</a>
+				  </footer>
+				  {{ end }}
+				</div>
+				{{ end }} -->
 			</div>
 		</div>
 	</div>
