--- a/themes/carlschirm/layouts/partials/footer.html
+++ b/themes/carlschirm/layouts/partials/footer.html
@@ -27,7 +27,7 @@
               <br>
               <a href="/datenschutz/">Datenschutz</a>
               <br>
-              <a href="/sitemap/">Sitemap</a>
+              <a href="/sitemap.xml">Sitemap</a>
             </div>
           </div>
         </div>
@@ -42,5 +42,4 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.1/photoswipe-ui-default.min.js" integrity="sha256-PWHOlUzc96pMc8ThwRIXPn8yH4NOLu42RQ0b9SpnpFk=" crossorigin="anonymous"></script>
     {{ end }}
     </body>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.4.0/jquery.fancybox.min.js"></script> -->
 </html>
