add copyright notice

--- a/themes/carlschirm/layouts/shortcodes/load-photoswipe.html
+++ b/themes/carlschirm/layouts/shortcodes/load-photoswipe.html
@@ -45,10 +45,10 @@ Documentation and licence at https://github.com/liwenyip/hugo-easy-gallery/
     <div class="pswp__top-bar">
       <!--  Controls are self-explanatory. Order can be changed. -->
       <div class="pswp__counter"></div>
-      <button class="pswp__button pswp__button--close" title="Close (Esc)"></button>
-      <button class="pswp__button pswp__button--share" title="Share"></button>
-      <button class="pswp__button pswp__button--fs" title="Toggle fullscreen"></button>
-      <button class="pswp__button pswp__button--zoom" title="Zoom in/out"></button>
+      <button class="pswp__button pswp__button--close" title="Schließen"></button>
+      <!-- <button class="pswp__button pswp__button--share" title="Share"></button> -->
+      <button class="pswp__button pswp__button--fs" title="Vollbild anzeigen"></button>
+      <button class="pswp__button pswp__button--zoom" title="Zoomen"></button>
       <!-- Preloader demo http://codepen.io/dimsemenov/pen/yyBWoR -->
       <!-- element will get class pswp__preloader--active when preloader is running -->
       <div class="pswp__preloader">
@@ -62,9 +62,9 @@ Documentation and licence at https://github.com/liwenyip/hugo-easy-gallery/
     <div class="pswp__share-modal pswp__share-modal--hidden pswp__single-tap">
       <div class="pswp__share-tooltip"></div>
     </div>
-    <button class="pswp__button pswp__button--arrow--left" title="Previous (arrow left)">
+    <button class="pswp__button pswp__button--arrow--left" title="Vorheriges Bild">
     </button>
-    <button class="pswp__button pswp__button--arrow--right" title="Next (arrow right)">
+    <button class="pswp__button pswp__button--arrow--right" title="Nächstes Bild">
     </button>
     <div class="pswp__caption">
       <div class="pswp__caption__center"></div>
