--- a/themes/carlschirm/layouts/shortcodes/gallery.html
+++ b/themes/carlschirm/layouts/shortcodes/gallery.html
@@ -27,7 +27,7 @@ Documentation and licence at https://github.com/liwenyip/hugo-easy-gallery/
 				      <img itemprop="thumbnail" src="{{ if $thumbexists }}{{ $thumbURL }}{{ else }}{{ $linkURL }}{{ end }}" alt="{{ $caption }}" /><!-- <img> hidden if in .gallery -->
 				    </div>
 			      <figcaption>
-		          <p>{{ $caption }}</p>
+		          <p>{{ $caption }}</em></p>
 			      </figcaption>
 				    <a href="{{ $linkURL }}" itemprop="contentUrl"></a><!-- put <a> last so it is stacked on top -->
 				  </figure>
