--- a/themes/carlschirm/layouts/partials/nav.html
+++ b/themes/carlschirm/layouts/partials/nav.html
@@ -1,4 +1,6 @@
-<nav class="navbar is-light" role="navigation" aria-label="main navigation">
+<nav class="navbar" role="navigation" aria-label="main navigation">
+<!-- uncomment to obtain previous navbar -->
+<!-- <nav class="navbar is-light" role="navigation" aria-label="main navigation"> -->  
   <div class="navbar-brand">
     <a class="navbar-item" href="/">
       <img  src="{{ print "images/" .Site.Params.logo.url | relURL }}"
